# QQchatbot

./: .env.dev  .env.prod  README.md  bot.py  private_sessions.pkl  pyproject.toml  testChatGPT.py
qq_chatgpt/pickles/: private_sessions.pkl
qq_chatgpt/plugins/: chat.py
qq_chatgpt/plugins/chat/: __init__.py  config.py  models_available.json  testChatGPT.py
qq_chatgpt/plugins/qqcard/: QQ卡片代码.md  __init__.py
